# data_races_in_cmake

./: CMakeLists.txt  README.md  script.sh
